# siscav-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.dev  INICIAR_SERVIDOR.md  INSTALLATION.md  POSTMAN_COLLECTION_README.md  README.md  RECUPERAR_COMMITS.md  SETUP_DATABASE.md  SISCAV_API.postman_collection.json  SISCAV_API.postman_environment.json  TEST_SUMMARY.md  alembic.ini  docker-compose.yml  env.local.example  env.supabase.example  package-lock.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-ml.txt  requirements.txt  ruff.toml  run_migrations.ps1  sonar-project.properties
.cursor/: rules
.github/: CI_LOCAL_GUIDE.md  GUIA_COMANDOS.md  PULL_REQUEST_TEMPLATE.md  README_CI.md  SONAR_SETUP.md
.github/workflows/: ci.yml
.planning/: BUGS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-security-authentication-correctness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
app/: __init__.py  main.py
app/alembic/: env.py
app/api/v1/: api.py  deps.py
apps/iot-device/: __init__.py  config.py  main.py  requirements.txt  run.py  run_demo.py
arduino/cancela_control/: cancela_control.ino
docs/: ANALISE_E_MELHORIAS_EXTRACAO_PLACA.md  ANALISE_QUALIDADE_E_REVISAO.md  ATUALIZACAO_CAMERA_LAPTOP.md  DEMONSTRACAO_COMPLETA.md  ESTADO_ATUAL_E_DECISOES.md  Especificação de Projeto.md  GUIA_RAPIDO_DEMONSTRACAO.md  INSTRUCOES_EXECUCAO_DEMONSTRACAO.md  NOTA_CAMERA_LAPTOP.md  OTIMIZACOES_CAMERA.md  README.md  README_DEMONSTRACAO.md  REORGANIZATION_SUMMARY.md  RESUMO_ANALISE_E_PREPARACAO.md  RESUMO_EXECUCAO_DEMONSTRACAO.md  RESUMO_FINAL_PREPARACAO.md  RESUMO_IMPLEMENTACAO_EXTRACAO.md  SISCAV_API.postman_collection.json  SISCAV_API.postman_environment.json  STATUS_DEMONSTRACAO.md  STATUS_FINAL.md  api_curl_tests_guide.md  init-server-guide.md  installation.md  setup_database_guide.md
docs/api/: 01-documentacao-tecnica.md  02-refatoracao-api.md  FRONTEND_INTEGRATION.md  README.md  frontend-integration.md  technical-documentation.md
docs/architecture/: README.md  acceptance-criteria-devops.md  executive-summary.md
docs/archive/: ARCHIVING_DECISIONS.md  README.md  architecture-backlog.md  mvc-pattern-reorganization.md
docs/arquitetura/: 01-criterios-aceite-devops.md  02-criterios-de-aceite-e-devops.md  README.md
docs/assets/: README.md
docs/banco-de-dados/: 01-modelo-de-dados.md  02-migracao-supabase.md  README.md
docs/database/: README.md
docs/development/: README.md  coding-standards.md
docs/frontend/: README.md  camera-preview-nextjs.md
docs/getting-started/: README.md  troubleshooting.md
docs/hardware/: README.md
docs/iot/: 01-refatoracao-dispositivo-iot.md  02-resumo-dispositivo-iot.md  README.md
docs/operacao/: 03-troubleshooting-instalacao.md  05-solucao-erro-numpy.md  README.md
docs/operations/: README.md
docs/presentation/: CHANGELOG.md  DECISOES_ARQUITETURA.md  DECISOES_DESIGN.md  README.md  RESUMO_MELHORIAS.md  index.html
docs/project-management/: README.md  backend-tasks-trello-status.md  trello-cards-format.md
docs/requirements/: README.md  project-specification.md
docs/requisitos/: 01-especificacao-projeto.md  README.md
docs/setup/: commands.md  database-setup.md  installation.md
docs/testing/: coverage-analysis.md
scripts/: debug_token.py  run_migrations.ps1  seed_demo.py  start_server.ps1
tests/: __init__.py  conftest.py  test_access_logs.py  test_auth_whitelist.py  test_main.py  test_plate_recognition.py
tests/integration/: __init__.py  test_access_log_flow.py  test_classification.py  test_endpoints.py  test_endpoints_access_logs.py  test_endpoints_auth.py  test_endpoints_devices.py  test_endpoints_gate_control.py  test_endpoints_whitelist.py  test_main.py  test_plate_recognition.py
tests/manual/: README.md  auth_flow_debug.py  debug_token.py  register_endpoint_manual.py  server_context_debug.py
tests/scripts/: auth_flow_debug.py  server_context_debug.py  test_all_endpoints.ps1  test_api.ps1  test_api_final.ps1  test_api_rest.ps1  test_api_simple.ps1
tests/unit/: __init__.py  test_classification.py  test_controllers.py  test_controllers_access_log.py  test_controllers_auth.py  test_controllers_device.py  test_controllers_gate.py  test_controllers_plate.py  test_core_config.py  test_core_security.py  test_core_utils.py  test_crud_access_log.py  test_crud_authorized_plate.py  test_crud_user.py  test_deps.py  test_repositories.py  test_repositories_access_log.py  test_repositories_authorized_plate.py  test_repositories_user.py  test_utils_plate.py
(+177 files in other folders)
