[project]
name = "siscav-api"
version = "0.1.0"
description = "Backend do Sistema de Controle de Acesso Veicular"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "sqlalchemy==2.0.49",
    "pydantic==2.12.5",
    "alembic==1.18.4",

    # Driver do Banco de Dados (necessário para SQLAlchemy conectar ao PostgreSQL)
    "psycopg2-binary==2.9.11",

    # Autenticação
    "passlib[argon2]==1.7.4",  # Para hashing de senhas (Argon2 é mais seguro que bcrypt)
    "python-jose[cryptography]==3.5.0",  # Para criação/validação de tokens JWT
    "slowapi==0.1.9",  # Para limitação de taxa (rate limiting) no login
    "email-validator==2.3.0",  # Necessário para validação robusta de EmailStr do Pydantic
    "python-multipart==0.0.20",  # Upload multipart (FastAPI)
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",  # Para testes unitários
    "pytest-cov==7.1.0",  # Para cobertura de código
    "ruff==0.14.6",  # Para linting rápido
    "httpx==0.28.1",  # Cliente HTTP para usar nos testes
]

[tool.pytest.ini_options]
# Configuração do Pytest para SISCAV-API
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Mostrar resumo de todos os resultados
    "--strict-markers",       # Erro em marcadores não registrados
    "--strict-config",        # Erro em configurações inválidas
    "--showlocals",           # Mostrar variáveis locais em caso de falha
]
markers = [
    "slow: marca testes que são lentos para executar",
    "integration: marca testes de integração",
    "unit: marca testes unitários",
    "smoke: marca testes de smoke testing",
]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/alembic/versions/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]